@@ -1,0 +1,10 @@
+ISOTP Poller Basics
+===================
+
+The Poller module has been lifted from the vehicle implementation. It supports periodic
+polling of OBD addresses, both older style (type 9 like those used for HUDs) and the newer
+ISOTP (and VWTP) multi-framed data protocol extensions.
+
+As it stands it is primarily a developer API with limited controls over the parameters.
+
+
